# WeatherDB

./: .dockerignore  .gitignore  .gitlab-ci.yml  .readthedocs.yaml  CHANGES.md  MANIFEST.in  README.md  TODO  pyproject.toml  requirements.txt  secretSettings_example.py  secretSettings_weatherDB_example.py  setup.py  zenodo.json
.github/workflows/: cleanup-cache.yml  python-test.yml
.gitlab/merge_request_templates/: newversion.md
docker/: Dockerfile  docker-compose.yaml  docker-compose_test.yaml  start-docker-test.sh
docs/: requirements.txt
docs/_build/doctrees/: README.doctree  environment.pickle  weatherDB.doctree  weatherDB.lib.doctree
docs/html/: .buildinfo  Methode.html  Quickstart.html  README.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  weatherDB.html  weatherDB.lib.html  weatherDB.lib.max_fun.html
docs/html/.doctrees/: Methode.doctree  Quickstart.doctree  README.doctree  environment.pickle  index.doctree  modules.doctree  weatherDB.doctree  weatherDB.lib.doctree  weatherDB.lib.max_fun.doctree
docs/html/_sources/: Methode.md.txt  Quickstart.md.txt  README.md.txt  weatherDB.lib.rst.txt  weatherDB.rst.txt
docs/latex/: weatherdb.aux  weatherdb.idx  weatherdb.out  weatherdb.tex  weatherdb.toc
docs/latex/.doctrees/: README.doctree  environment.pickle  index.doctree  modules.doctree  weatherDB.lib.doctree
docs/source/: License.rst  Methode.html  Methode.md  Quickstart.md  README.md  conf.py  index.rst  modules.rst  weatherDB.lib.max_fun.rst  weatherDB.lib.rst  weatherDB.rst  weatherDB.station.rst  weatherDB.stations.rst  weatherDB.utils.rst
docs/source/_static/: Methode.md  README.md  custom.css
docs/source/api/: api.rst  cli.rst  weatherDB.broker.rst  weatherDB.config.rst  weatherDB.db.rst  weatherDB.rst  weatherDB.station.rst  weatherDB.stations.rst  weatherDB.utils.rst  weatherdb.broker.rst  weatherdb.config.rst  weatherdb.db.rst  weatherdb.rst  weatherdb.station.GroupStation.rst  weatherdb.station.StationBases.rst  weatherdb.station.StationET.rst  weatherdb.station.StationP.rst  weatherdb.station.StationPD.rst  weatherdb.station.StationT.rst  weatherdb.station.rst  weatherdb.stations.StationsBase.rst  (+6 more)
tests/: baseTest.py  testSuite.py  test_downloadRasters.py  test_emptyDB.py  test_filledDB.py  test_freshDB.py  test_initDB.py  test_setup.py
tests/test-data/: test-data-config.ini
weatherDB/: __init__.py  _version.py  broker.py  cli.py  logging.py  station.py  stations.py  wdb_logging.py
weatherDB.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
weatherDB/alembic/: README.md  alembic.ini  config.py  env.py
weatherDB/config/: ConfigParser.py  __init__.py  config.py  config_default.ini
weatherDB/db/: __init__.py  alembic.ini  connections.py  models.py  setup.py  views.py
weatherDB/lib/: connections.py  models.py  utils.py
weatherDB/station/: GroupStation.py  StationBases.py  StationET.py  StationN.py  StationND.py  StationP.py  StationPD.py  StationT.py  __init__.py  base.py  constants.py  station.py
weatherDB/stations/: GroupStations.py  StationsBase.py  StationsBaseTET.py  StationsET.py  StationsN.py  StationsND.py  StationsP.py  StationsPD.py  StationsT.py  __init__.py  base.py  stations.py
weatherDB/utils/: TimestampPeriod.py  dwd.py  geometry.py  get_data.py  logging.py
weatherdb/: __init__.py  broker.py  cli.py
weatherdb/alembic/: README.md  env.py
weatherdb/config/: ConfigParser.py  config_default.ini
weatherdb/db/: connections.py  views.py
weatherdb/station/: GroupStation.py  StationBases.py  StationET.py  StationP.py  StationT.py  __init__.py  constants.py
weatherdb/stations/: GroupStations.py  StationsBase.py  StationsP.py  StationsT.py
weatherdb/utils/: TimestampPeriod.py  __init__.py  dwd.py  get_data.py
(+24 files in other folders)
