[project]
name = "weatherDB"
dynamic = ["version"]
description = "This is a package to work with and to create the Weather Database which handles, checks, fills and corrects DWD Weather Station data."
readme = "README.md"
authors = [
    { name = "Max Schmit", email = "max.schmit@hydrology.uni-freiburg.de" }
]
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Hydrology",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Intended Audience :: Science/Research",
    "Natural Language :: English"
]
dependencies = [
    "geopandas",
    "shapely>=2",
    "pandas",
    "numpy",
    "progressbar2",
    "rasterio",
    "sqlalchemy>2.0",
    "psycopg2-binary",
    "GeoAlchemy2",
    "alembic",
    "requests",
    "keyring",
    "keyrings.alt ; sys_platform == 'linux'",
    "rasterstats",
    "click",
    "setuptools>=61.0",
    "setuptools_scm",
]
license = { file = "LICENSE" }
requires-python = ">= 3.8, < 3.12"

[project.scripts]
weatherDB = "weatherDB.cli:safe_entry"

[project.urls]
Homepage = "https://gitlab.uni-freiburg.de/hydrology/weatherDB/"
Issues = "https://gitlab.uni-freiburg.de/hydrology/weatherDB/-/issues"
Documentation = "https://weatherdb.readthedocs.io/latest/"

[project.optional-dependencies]
optionals = [
    "coloredlogs",
    "colorama"
]

[build-system]
requires = [
    "build",
    "setuptools>=61.0",
    "wheel",
    "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = {}  # Scan the project directory with the default parameters

[tool.setuptools_scm]
version_file = "weatherDB/_version.py"
version_file_template = "__version__ = \"{version}\""